# libcuwflow

./: CMakeLists.txt  License.MihirJain.txt  README.md  dox.in  generateDoc.cmake
data/: README.txt
include/: box.h  box.hpp  densetrack.h  descriptors.h  descriptorsgpu.h  initialize.h  initializegpu.h  iplimagepyramid.h  iplimagewrapper.h  kernels.cuh  numericfunctions.h  ownkernels.cuh  point.h  point.hpp  size.h  size.hpp
src/: CMakeLists.txt  descriptorsgpu.cpp  iplimagepyramid.cpp  iplimagewrapper.cpp  kernels.cu  ownkernels.cu
tests/: CMakeLists.txt  test.cpp
